deployment/server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  labels:
    app: server-app
spec:
  replicas: 2
  selector:
    matchLabels:
      name: server-pod
      app: server-app
  template:
    metadata:
      name: server-pod
      labels:
        name: server-pod
        app: server-app
    namespace: default

    spec:
      containers:
      - name: server-app
        image: docker.io/barry1234/talent-server
        ports:
        - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: server-app
